tests/ui/coroutine/unresolved-ct-var.stderr
error[E0277]: the trait `IntoFuture` is not implemented for `[(); _]`
  --> $DIR/unresolved-ct-var.rs:6:45
   |
LL |         let s = std::array::from_fn(|_| ()).await;
   |                 ----------------------------^^^^^
   |                 |                          ||
   |                 |                          |the trait `IntoFuture` is not implemented for `[(); _]`, which is required by `[(); _]: IntoFuture`
   |                 |                          help: remove the `.await`
   |                 this call returns `[(); _]`
   |
   = note: required for `[(); _]` to implement `IntoFuture`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
